Upgrade configuration to Java-21.